--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
+    <title>fplAnalytics</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -77,21 +77,25 @@
             </ul>
         </nav>
         <!-- end nav -->
-
+   
         <!-- box-intro -->
         <section class="box-intro">
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
                         <b class="is-visible">form.</b>
-                        <b>&nbsp;&nbsp;&nbsp;fixture.</b>
+                        <b>&nbsp;&nbsp;fixture&nbsp;ಠ_ಠ</b>
                         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data.</b>
-						<b>analytics.</b>
-						<b>&nbsp;&nbsp;captain.</b>
-						<b>&nbsp;&nbsp;&nbsp;&nbsp;bonus.</b>
+						<b>#analytics.</b>
+						<b>&nbsp;&nbsp;captain??</b>
+						<b>bonus¯&nbsp;\(ツ)/¯</b>
+						<b>&nbsp;&nbsp;&nbsp;&nbsp;bench.</b>
+						<b>&nbsp;&nbsp;rankings!</b>
+						<b>&nbsp;&nbsp;&nbsp;&nbsp;Chips!!</b>	
+						<b>&nbsp;&nbsp;&nbsp;&nbsp;$budget</b>
                     </span>
 		        </h1>
-                <h5>everything Fantasy Premier League</h5>
+                <h5><b>fplAnalytics</b> - Amateurs call it genius. Masters call it planning.</h5>
             </div>
 
             <div class="mouse">
