--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -84,12 +84,12 @@
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
                         <b class="is-visible">form.</b>
-                        <b>&nbsp;&nbsp;fixture&nbsp;ಠ_ಠ</b>
+                        <b>&nbsp;&nbsp;&nbsp;fixture</b>
                         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data.</b>
-						<b>#analytics.</b>
+						<b>#analytics</b>
 						<b>&nbsp;&nbsp;captain??</b>
-						<b>bonus¯&nbsp;\(ツ)/¯</b>
-						<b>&nbsp;&nbsp;&nbsp;&nbsp;bench.</b>
+						<b>&nbsp;&nbsp;&nbsp;&nbsp;bonus**</b>
+						<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bench.</b>
 						<b>&nbsp;&nbsp;rankings!</b>
 						<b>&nbsp;&nbsp;&nbsp;&nbsp;Chips!!</b>	
 						<b>&nbsp;&nbsp;&nbsp;&nbsp;$budget</b>
