--- a/fplanalytics/ppbreak.html
+++ b/fplanalytics/ppbreak.html
@@ -76,7 +76,8 @@
 	  -->
 	  
     <div class="top-bar">
-        <h1>project title</h1>
+        <h1>#fplAnalytics</h1>
+		<p>Player's Points Breakdown</p>
         <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>
     </div>
 	  
