--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -111,13 +111,13 @@
             <div class="no-padding portfolio_container">
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6  fashion logo">
-                    <a href="single-project.html" class="portfolio_item">
+                    <a href="ppbreak.html" class="portfolio_item">
                         <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mockups in seconds</span>
-                                    <em>Fashion / Logo</em>
+                                    <span>Player's Points BreakDown</span>
+                                    <em>Table</em>
                                 </div>
                             </div>
                         </div>
