New bootstrap template update

--- a/fplanalytics/priceTable.html
+++ b/fplanalytics/priceTable.html
@@ -62,7 +62,7 @@
 
 
 
-                <li class="box-label">Follow me</li>
+                <li class="box-label">Follow fplAnalytics</li>
 
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
@@ -85,13 +85,12 @@
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>-->
             </ul>
-			
     </div>
 	  
 		
 	<div class="container">
     <div class="embed-responsive embed-responsive-4by3 center-block">
-    <iframe class="embed-responsive-item" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/PtsBreakdown.html"></iframe>	
+    <iframe class="embed-responsive-item" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/PriceWatch.html"></iframe>	
     </div>
     </div>
 	
