--- a/fplanalytics/injuryTable.html
+++ b/fplanalytics/injuryTable.html
@@ -62,7 +62,7 @@
 
 
 
-                <li class="box-label">Follow me</li>
+                <li class="box-label">Follow fplAnalytics</li>
 
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
@@ -77,7 +77,7 @@
 	  
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
-		<p>Player's Points Breakdown</p>
+		<p>Injury Table</p>
         <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>		
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
@@ -85,13 +85,12 @@
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>-->
             </ul>
-			
     </div>
 	  
 		
 	<div class="container">
     <div class="embed-responsive embed-responsive-4by3 center-block">
-    <iframe class="embed-responsive-item" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/PtsBreakdown.html"></iframe>	
+    <iframe class="embed-responsive-item" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/InjuryLeague.html"></iframe>	
     </div>
     </div>
 	
