--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -149,8 +149,8 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="treeMap.html" class="portfolio_item">
+                        <img src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/treeMap.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
