--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -154,8 +154,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Points Distribution Treemap</span>
+                                    <em>Click for interactive viz.</em>
                                 </div>
                             </div>
                         </div>
