--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </a>
-					<h5><b>Price Change Database</b></h5>
+					<h5><b>Overnight Price Change</b></h5>
                 </div>
                 <!-- end single work -->
 
