--- a/fplanalytics/InjuryWatch.html
+++ b/fplanalytics/InjuryWatch.html
@@ -49,36 +49,29 @@
         </header>
         <!-- end box header -->
 
-        <!-- nav -->
+        <!-- nav -->        
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
-
-                <li><a href="index.html">Intro</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="services.html">services</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a></li>
-
-
-
-                <li class="box-label">Follow me</li>
-
+                <li><i class="glyphicon glyphicon-home"></i><a href="index.html">   Home</a></li>
+                <li><i class="glyphicon glyphicon-th-list"></i><a href="table.html">Data Tables</a></li>
+                <li><i class="glyphicon glyphicon-stats"></i><a href="about.html">Visualizations</a></li>
+                <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historic Data</a></li>
+                <li><i class="glyphicon glyphicon-bold"></i><a href="blog.html">Blog</a></li>
+		<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>               
+                <li class="box-label">Follow</li>
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
+               <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+               <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
+			   
             </ul>
-       <!--
-      <div class="container">
-      <iframe frameborder="0" height="650px" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/PtsBreakdown.html" width="100%">
-      </div>
-	  -->
+        </nav>
+        <!-- end nav -->
 	  
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
-		<p>Player's Points Breakdown</p>
-        <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>		
+		<p>Injury/Suspension Status</p>
+       <!-- <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
