--- a/fplanalytics/history1617.html
+++ b/fplanalytics/history1617.html
@@ -70,7 +70,7 @@
 	  
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
-	<p>Player's performance DB</p>
+	<p>Season 2016/17</p>
         <!-- <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
