--- a/fplanalytics/priceTable.html
+++ b/fplanalytics/priceTable.html
@@ -81,8 +81,8 @@
 	  
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
-		<p>Player's Points Breakdown</p>
-        <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>		
+		<p>Price and Transfer Table</p>
+        <!-- <p><a href="index.html">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
