--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -123,8 +123,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-								   <img src="img/priceChange4.jpg" alt="image" class="img-responsive" />
-									<span>Click for full table</span>	                                                        					
+				  <img src="img/priceChange4.jpg" alt="image" class="img-responsive" />
+				  <span>Click for full table</span>	                                                        					
                                 </div>
                             </div>
                         </div>
@@ -134,14 +134,14 @@
                 <!-- end single work -->
 
 				
-				<!-- single work -->
+		<!-- single work -->
                 <div class="col-md-3 col-sm-6" style="text-align:center">											
                     <a href="treeMap.html" class="portfolio_item">
                         <img src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/treeMap.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-								  <img src="img/trophy1.jpg" alt="image" class="img-responsive" />
+				  <img src="img/trophy1.jpg" alt="image" class="img-responsive" />
                                   <span>Click for interactive viz.</span>                                    
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                     </a>
-					<h5><b>Injuries/Suspensions</b></h5>					
+					<h5><b>Latest Injuries/Suspensions</b></h5>					
                 </div>
                 <!-- end single work -->
 
@@ -201,20 +201,18 @@
 	<section id="two" class="tiles">
     <!-- <div class="portfolio-div"> -->
       <!--  <div class="portfolio"> -->
-            <div class="no-padding portfolio_container">
-			
-			
+            <div class="no-padding portfolio_container">					
                 <!-- single work -->				 
                 <div class="col-md-3 col-sm-6" style="text-align:center">
 				<!--<h5><b>Player's Performance Database</b></h5>-->
-                    <a href="playerStatus.html" class="portfolio_item">
+                    <a href="history.html" class="portfolio_item">
                         <img src="img/history.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                    <!-- <span>Player performence DB</span> -->                                   														
-									<img src="img/history1.jpg" alt="image" class="img-responsive" />
-									<span>Data from previous seasons</span>		
+				   <img src="img/history1.jpg" alt="image" class="img-responsive" />
+				   <span>Data from previous seasons</span>		
                                 </div>								
                             </div>							
                         </div>						
