--- a/fplanalytics/treeMap.html
+++ b/fplanalytics/treeMap.html
@@ -83,7 +83,7 @@
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
 		<p>Points Distribution Treemap</p>
-        <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>		
+        <!-- <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
