--- a/fplanalytics/history1415.html
+++ b/fplanalytics/history1415.html
@@ -49,21 +49,16 @@
         </header>
         <!-- end box header -->
 
-         <!-- nav -->
+        <!-- nav -->        
         <nav>
             <ul class="box-primary-nav">
                 <li><i class="glyphicon glyphicon-home"></i><a href="index.html">   Home</a></li>
                 <li><i class="glyphicon glyphicon-th-list"></i><a href="table.html">Data Tables</a></li>
-                <li><i class="glyphicon glyphicon-stats"></i><a href="vizs.html">Visualizations</a></li>
+                <li><i class="glyphicon glyphicon-stats"></i><a href="about.html">Visualizations</a></li>
                 <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historic Data</a></li>
                 <li><i class="glyphicon glyphicon-bold"></i><a href="blog.html">Blog</a></li>
-				<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>
-               
-
-
-
+		<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>               
                 <li class="box-label">Follow</li>
-
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
@@ -72,17 +67,10 @@
             </ul>
         </nav>
         <!-- end nav -->
-			
-			
-       <!--
-      <div class="container">
-      <iframe frameborder="0" height="650px" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/PtsBreakdown.html" width="100%">
-      </div>
-	  -->
 	  
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
-		<p>Points Distribution Treemap</p>
+	<p>Season 2014/15 </p>
         <!-- <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
@@ -92,11 +80,10 @@
             </ul>
     </div>
 	  
-		
-	<div class="container">
-    <div class="embed-responsive embed-responsive-4by3 center-block">
-    <iframe class="embed-responsive-item" src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/playerPtsTreemap.html"></iframe>	
-    </div>
+     </br>
+     </br>
+    <div class="container">
+     <h3>Currently we have very limited or no data from this FPL season. We are busy with data modeling of whatever we have while always looking to gather more. If you have historical data from this FPL season then you can help the whole FPL community by providing them to us. To do so please contact us via one of our social media accounts. Thank you.</h4>
     </div>
 	
 		
