--- a/fplanalytics/priceTable.html
+++ b/fplanalytics/priceTable.html
@@ -54,7 +54,7 @@
             <ul class="box-primary-nav">
                 <li><i class="glyphicon glyphicon-home"></i><a href="index.html">   Home</a></li>
                 <li><i class="glyphicon glyphicon-th-list"></i><a href="table.html">Data Tables</a></li>
-                <li><i class="glyphicon glyphicon-stats"></i><a href="about.html">Visualizations</a></li>
+                <li><i class="glyphicon glyphicon-stats"></i><a href="vizs.html">Visualizations</a></li>
                 <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historic Data</a></li>
                 <li><i class="glyphicon glyphicon-bold"></i><a href="blog.html">Blog</a></li>
 				<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>
