Cleanup and designing tweaks

--- a/fplanalytics/InjuryWatch.html
+++ b/fplanalytics/InjuryWatch.html
@@ -42,7 +42,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text"></span><span class="box-menu-icon"></span>
             </a>
             <!-- box-primary-nav-trigger -->
 						
@@ -53,15 +53,15 @@
         <nav>
             <ul class="box-primary-nav">
                 <li><i class="glyphicon glyphicon-home"></i><a href="index.html">   Home</a></li>
-                <li><i class="glyphicon glyphicon-th-list"></i><a href="table.html">Data Tables</a></li>
+                <li><i class="glyphicon glyphicon-th-list"></i><a href="tables.html">Data Tables</a></li>
                 <li><i class="glyphicon glyphicon-stats"></i><a href="vizs.html">Visualizations</a></li>
-                <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historic Data</a></li>
+                <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historical Data</a></li>
                 <li><i class="glyphicon glyphicon-bold"></i><a href="blog.html">Blog</a></li>
 		<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>               
                 <li class="box-label">Follow</li>
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
+               <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
 			   
             </ul>
@@ -73,9 +73,9 @@
 		<p>Injury/Suspension Status</p>
        <!-- <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p> -->
             <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://instagram.com/fplAnalytics"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>-->
             </ul>
 			
