--- a/fplanalytics/contact.html
+++ b/fplanalytics/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
+    <title>fplAnalytics</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +49,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text"></span><span class="box-menu-icon"></span>
             </a>
             <!-- box-primary-nav-trigger -->
         </header>
@@ -60,9 +60,9 @@
         <nav>
             <ul class="box-primary-nav">
                 <li><i class="glyphicon glyphicon-home"></i><a href="index.html">   Home</a></li>
-                <li><i class="glyphicon glyphicon-th-list"></i><a href="table.html">Data Tables</a></li>
+                <li><i class="glyphicon glyphicon-th-list"></i><a href="tables.html">Data Tables</a></li>
                 <li><i class="glyphicon glyphicon-stats"></i><a href="vizs.html">Visualizations</a></li>
-                <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historic Data</a></li>
+                <li><i class="glyphicon glyphicon-header"></i><a href="history.html">Historical Data</a></li>
                 <li><i class="glyphicon glyphicon-bold"></i><a href="blog.html">Blog</a></li>
 				<li><i class="glyphicon glyphicon-envelope"></i><a href="contact.html">Contact</a></li>
                
@@ -71,9 +71,9 @@
 
                 <li class="box-label">Follow</li>
 
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
 			   
             </ul>
@@ -85,6 +85,12 @@
     <!-- top bar -->    	 
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
+		 <ul class="social-ul">
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://instagram.com/fplAnalytics"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
+                <!--<li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>-->
+            </ul>
 	</div>
     <!-- end top bar -->
 
