--- a/fplanalytics/vizs.html
+++ b/fplanalytics/vizs.html
@@ -49,7 +49,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text"></span><span class="box-menu-icon"></span>
             </a>
         </header>
         <!-- end box-header -->
@@ -70,9 +70,9 @@
 
                 <li class="box-label">Follow</li>
 
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
+               <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
                <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
 			   
             </ul>
@@ -86,6 +86,12 @@
     <div class="top-bar">
         <h1>#fplAnalytics</h1>
         <p>Interactive Data Visualizations</p>
+		 <ul class="social-ul">
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://instagram.com/fplAnalytics"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
+                <!--<li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>-->
+            </ul>
     </div>
     <!-- end top bar -->
 
@@ -109,15 +115,16 @@
 
                 <!-- portfolio_container -->
                 <div class="no-padding portfolio_container clearfix">
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-6  points cost">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+				
+                     <!-- single work -->
+                    <div class="col-md-4 col-sm-12 points cost">
+                        <a href="PointsPerMillionCost.html" class="portfolio_item">                           
+						    <img src="img/PointsPerMillionCost.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Mockups in seconds</span>
-                                        <em>Fashion / Logo</em>
+                                    <div class="item_info">                                     
+  								     <img src="img/PointsPerMillionCost2.png" alt="image" class="img-responsive" />    
+                                     <span>Points Per Million Cost</span>									 
                                     </div>
                                 </div>
                             </div>
@@ -126,14 +133,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 points cost">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                     <div class="col-md-4 col-sm-12 cost transfers">
+                        <a href="TransferAnomaly.html" class="portfolio_item">                           
+						    <img src="img/transferAnomaly.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Floating mockups</span>
-                                        <em>Ads / Graphics</em>
+                                    <div class="item_info">                                     
+  								     <img src="img/transferAnomaly.png" alt="image" class="img-responsive" />    
+                                     <span>Transfer Anomaly Detection</span>									 
                                     </div>
                                 </div>
                             </div>
@@ -144,11 +151,12 @@
                     <!-- single work -->
                     <div class="col-md-4 col-sm-12 points">
                         <a href="treemap.html" class="portfolio_item">                           
-						    <img src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/treeMap.png" alt="image" class="img-responsive" />
+						    <img src="img/treeMap.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">                                     
-  								     <img src="https://gpoudel.github.io/gitFPL/fplBoardLive/2016/treeMap.png" alt="image" class="img-responsive" />            
+  								     <img src="img/treeMap.png" alt="image" class="img-responsive" />    
+                                     <span>Season Total Points Distribution Treemap</span>									 
                                     </div>
                                 </div>
                             </div>
@@ -157,14 +165,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 transfers cost">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                   <div class="col-md-4 col-sm-12 cost transfers">
+                        <a href="PlayerValueChangeSeason.html" class="portfolio_item">                           
+						    <img src="img/PlayerValueChangeSeason.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Held by hands</span>
-                                        <em>Fashion / Ads</em>
+                                    <div class="item_info">                                       							
+  								     <img src="img/PlayerValueChangeSeason2.png" alt="image" class="img-responsive" />    
+                                     <span>Player Value Change - Season</span>	                                      									
                                     </div>
                                 </div>
                             </div>
@@ -172,85 +180,8 @@
                     </div>
                     <!-- end single work -->
 
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                            <div class="portfolio_item_hover">
-                                <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Mobile devices</span>
-                                        <em>Graphics / Ads</em>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- end single work -->
 
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-12 photography">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                            <div class="portfolio_item_hover">
-                                <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Photorealistic smartwatch</span>
-                                        <em>Photography</em>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- end single work -->
 
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                            <div class="portfolio_item_hover">
-                                <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Mobile devices</span>
-                                        <em>Graphics / Ads</em>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- end single work -->
-
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                            <div class="portfolio_item_hover">
-                                <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Mobile devices</span>
-                                        <em>Graphics / Ads</em>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- end single work -->
-
-                    <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
-                        <a href="single-project.html" class="portfolio_item">
-                            <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                            <div class="portfolio_item_hover">
-                                <div class="portfolio-border clearfix">
-                                    <div class="item_info">
-                                        <span>Mobile devices</span>
-                                        <em>Graphics / Ads</em>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- end single work -->
 
                 </div>
                 <!-- end portfolio_container -->
