--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -49,7 +49,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text"></span><span class="box-menu-icon"></span>
             </a>
             <!-- box-primary-nav-trigger -->
         </header>
@@ -70,10 +70,10 @@
 
                 <li class="box-label">Follow</li>
 
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-               <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-               <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
+                <li class="box-social"><a href="https://www.facebook.com/fplAnalytics"><i class="ion-social-facebook"></i></a></li>
+                <!--  <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
+                <li class="box-social"><a href="https://twitter.com/fplAnalytics"><i class="ion-social-twitter"></i></a></li>
+                <!--  <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
 			   
             </ul>
         </nav>
