bugfix: updated typo

--- a/fplanalytics/vizs.html
+++ b/fplanalytics/vizs.html
@@ -151,11 +151,11 @@
                     <!-- single work -->
                     <div class="col-md-4 col-sm-12 points">
                         <a href="treemap.html" class="portfolio_item">                           
-						    <img src="img/treeMap.png" alt="image" class="img-responsive" />
+						    <img src="img/treemap.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">                                     
-  								     <img src="img/treeMap.png" alt="image" class="img-responsive" />    
+  								     <img src="img/treemap.png" alt="image" class="img-responsive" />    
                                      <span>Season Total Points Distribution Treemap</span>									 
                                     </div>
                                 </div>
