--- a/fplanalytics/index.html
+++ b/fplanalytics/index.html
@@ -121,7 +121,7 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6" style="text-align:center">				
                     <a href="priceTable.html" class="portfolio_item">
-                        <img src="img/priceChange.png" alt="image" class="img-responsive" />
+                        <img src="img/PriceChange-logo.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                     </a>
-					<h5><b>Latest Injuries/Suspensions</b></h5>					
+					<h5><b>Overnight Injuries/Suspensions</b></h5>					
                 </div>
                 <!-- end single work -->
 
